--- a/client/mobile/index.html
+++ b/client/mobile/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>发弹幕</title>
 </head>
 <body>
   <div id="root"></div>
